feat(session): 운동 세트 — 세션 목표(V26)·세트 표·pose_data 집계로 세트 요약, 세트 표기·리포트 반영
lunge-and-set-backend.md §4 ③. 세트 경계는 «rep 이 세트당 목표에 닿는 순간» 하나뿐이라
프레임의 세트는 ceil(rep_number / T) 로 역산된다 — pose_data(파티션 표)에 set_index 를 더하지
않고, 세트별 요약은 완료 시점에 Spring 이 pose_data 의 rep 별 집계로 만든다(사용자 confirm,
09-22). AI 가 보낸 값 대신 저장본에서 집계하는 것은 싱크 통계(#75)와 같은 원칙이고, 그래서
이 단계는 proto(②)·AI 구현에 묶이지 않는다.

- V26: exercise_sessions.target_reps_per_set·target_sets(NULL 허용) + exercise_session_sets
  (session_id, set_no) PK, FK CASCADE. NULL 은 세트 도입 전 세션 — 세트 행 없이 «1세트 x N회» 폴백
- POST /exercises/sessions body targetRepsPerSet?·targetSets? — 없으면 RecommendationService
  공식(페르소나·레벨)으로 채우고 그 level 을 죽어 있던 difficultyLevel 에 넣는다. 세트 «수» 는
  공식이 없어 사용자 값만. 응답·GET /sessions/active 에 확정값. 세트 설정 API 는 두지 않는다 —
  도중 변경은 역산을 흔든다
- RecommendationService.getNextSessionRecommendation(memberId, exerciseId) — 같은 종목 최근
  세션만 본다(런지 목표를 스쿼트 이력으로 정하지 않게). 기존 GET 은 스쿼트 기본값 유지
- SessionCompletionTx: findRepSummaries(rep 번호·평균·시작/끝 초) 한 쿼리로 싱크 통계와 세트를
  같이 만든다(SessionSetAssembler, 순수 함수). 첫 완료 전이에서만 INSERT — 재전송에 중복 없음
- SetSummaryFormatter: 세트 표 기반 «N세트 x T회» / 마지막만 짧으면 «(마지막 r회)». 주간·일별
  목록은 IN 한 방으로 세트를 읽고, 세션 리포트에 sets[] 추가
- 세션 삭제가 세트 행도 지운다(H2 엔 FK CASCADE 가 없다)

검증: 전체 939 통과(스킵 6 기존). race FlywayMigrationValidationTest 2/2 — 실 MySQL 에서
V26 ↔ 엔티티(복합키·DOUBLE·DECIMAL) 정합. e2e 는 별도 확인.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>