@@ -11,6 +11,8 @@ import com.shadowfit.global.error.ErrorCode;
 import com.shadowfit.global.util.SetSummaryFormatter;
 import com.shadowfit.model.exercise.Session;
 import com.shadowfit.repository.exercise.SessionRepository;
+import com.shadowfit.repository.exercise.SessionSetRepository;
+import com.shadowfit.model.exercise.SessionSet;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
@@ -35,6 +38,7 @@ import java.util.stream.Collectors;
 public class SessionActivityQueryService {
     private final SessionRepository sessionRepository;
     private final AttendanceService attendanceService;
+    private final SessionSetRepository sessionSetRepository;
 
     @Transactional(readOnly = true)
     public WeeklyActivityResponseDto getWeeklyActivity(Long memberId) {
@@ -78,10 +82,10 @@ public class SessionActivityQueryService {
             ));
         }
 
-        List<ExerciseSessionDto> todayDetails = weeklySessions.stream()
+        List<Session> todaySessions = weeklySessions.stream()
                 .filter(s -> s.getStartTime() != null && s.getStartTime().toLocalDate().equals(today))
-                .map(this::toSessionDto)
-                .collect(Collectors.toList());
+                .toList();
+        List<ExerciseSessionDto> todayDetails = toSessionDtos(todaySessions);
 
         return WeeklyActivityResponseDto.builder()
                 .dateRange(String.format("%d월 %d일 - %d일",
@@ -165,10 +169,9 @@ public class SessionActivityQueryService {
         List<Session> sessions = sessionRepository.findByMemberIdAndStartTimeBetween(
                 memberId, date.atStartOfDay(), date.atTime(23, 59, 59));
 
-        List<ExerciseSessionDto> details = sessions.stream()
+        List<ExerciseSessionDto> details = toSessionDtos(sessions.stream()
                 .filter(s -> s.getStartTime() != null)
-                .map(this::toSessionDto)
-                .collect(Collectors.toList());
+                .toList());
 
         return DailyActivityResponseDto.builder()
                 .date(date.toString())
@@ -177,14 +180,26 @@ public class SessionActivityQueryService {
                 .build();
     }
 
-    // Session → ExerciseSessionDto 공용 매핑 (주간 todayDetails / 일별 조회 공유)
-    private ExerciseSessionDto toSessionDto(Session s) {
+    // Session → ExerciseSessionDto 공용 매핑 (주간 todayDetails / 일별 조회 공유).
+    // 세트 행(V26)은 세션 수만큼 쿼리가 나가지 않게 IN 한 방으로 읽어 세션별로 나눈다.
+    private List<ExerciseSessionDto> toSessionDtos(List<Session> sessions) {
+        if (sessions.isEmpty()) return List.of();
+        Map<Long, List<SessionSet>> setsBySession = sessionSetRepository
+                .findBySessionIdInOrderBySessionIdAscSetNoAsc(sessions.stream().map(Session::getId).toList())
+                .stream()
+                .collect(Collectors.groupingBy(set -> set.getSession().getId()));
+        return sessions.stream()
+                .map(s -> toSessionDto(s, setsBySession.getOrDefault(s.getId(), List.of())))
+                .collect(Collectors.toList());
+    }
+
+    private ExerciseSessionDto toSessionDto(Session s, List<SessionSet> sets) {
         ExerciseSessionDto detail = new ExerciseSessionDto();
         detail.setSessionId(s.getId());
         detail.setExerciseName(s.getExercise().getName());
         // 세트 표기는 SetSummaryFormatter 한 곳에서만 만든다 — 과거 여기만 "0세트"로 어긋나
         // 같은 세션이 화면마다 0/1세트로 다르게 보였음(#69).
-        detail.setSetSummary(SetSummaryFormatter.format(s.getTotalReps()));
+        detail.setSetSummary(SetSummaryFormatter.format(sets, s.getTotalReps()));
         detail.setSyncRate(s.getAvgSyncRate() != null ? s.getAvgSyncRate().doubleValue() : 0.0);
         return detail;
     }
